versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/manage-clusters.adoc
= Cluster Administration

After you provision a cluster in Rancher, you can begin using powerful Kubernetes features to deploy and scale your containerized applications in development, testing, or production environments.

[NOTE]
====

This section assumes a basic familiarity with Docker and Kubernetes. For a brief explanation of how Kubernetes components work together, refer to the xref:../../about-rancher/concepts.adoc[concepts] page.
====


== Managing Clusters in Rancher

After clusters have been xref:../../cluster-deployment/cluster-deployment.adoc[provisioned into Rancher], link:../../rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#cluster-roles[cluster owners] will need to manage these clusters. There are many different options of how to manage your cluster.

import ClusterCapabilitiesTable from '../../../shared-files/_cluster-capabilities-table.md';+++<ClusterCapabilitiesTable>++++++</ClusterCapabilitiesTable>+++

== Configuring Tools

Rancher contains a variety of tools that aren't included in Kubernetes to assist in your DevOps operations. Rancher can integrate with external services to help your clusters run more efficiently. Tools are divided into the following categories:

* Alerts
* Notifiers
* Logging
* Monitoring
* Istio Service Mesh
* OPA Gatekeeper

Tools can be installed through *Apps.*
